[gd_scene load_steps=15 format=3 uid="uid://cqek1uxycpqd2"]

[ext_resource type="Texture2D" uid="uid://b5whui6o1e5ci" path="res://Art/TexturesAtlas.png" id="1_56dcq"]
[ext_resource type="Script" uid="uid://vr8pxwojtgqt" path="res://Scripts/Guard/guard.gd" id="1_ctrrx"]
[ext_resource type="Script" uid="uid://e7eh02tih4if" path="res://Scripts/hitbox.gd" id="2_y18gj"]
[ext_resource type="Texture2D" uid="uid://dol6ki0qs360x" path="res://Art/UI/InputPrompts/keyboard_e.png" id="3_2t02l"]
[ext_resource type="Texture2D" uid="uid://ccdhg3mftoxhx" path="res://Art/lightcone.png" id="6_dxgcx"]
[ext_resource type="Script" uid="uid://j38qilvwvtye" path="res://Scripts/Guard/sight.gd" id="7_vm30s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_56dcq"]
radius = 4.0
height = 16.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dxgcx"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_y18gj"]
atlas = ExtResource("1_56dcq")
region = Rect2(0, 136, 16, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y18gj"]
radius = 8.0
height = 32.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vm30s"]
light_mode = 1

[sub_resource type="Animation" id="Animation_2t02l"]
resource_name = "Prompt"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InputPrompt:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InputPrompt:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.05, 0.05), Vector2(0.15, 0.15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("InputPrompt:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -25)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("InputPrompt:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rojh0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InputPrompt:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InputPrompt:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.15, 0.15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("InputPrompt:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -25)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("InputPrompt:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rojh0"]
_data = {
&"Prompt": SubResource("Animation_2t02l"),
&"RESET": SubResource("Animation_rojh0")
}

[node name="Guard" type="CharacterBody2D"]
collision_layer = 16
motion_mode = 1
script = ExtResource("1_ctrrx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_56dcq")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_dxgcx")
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_y18gj")

[node name="Components" type="Node2D" parent="."]

[node name="Hitbox" type="Area2D" parent="Components"]
collision_layer = 0
collision_mask = 8
script = ExtResource("2_y18gj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/Hitbox"]
position = Vector2(0, -8)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_y18gj")
debug_color = Color(0.493378, 0.563299, 0.431724, 0.42)

[node name="InputPrompt" type="Sprite2D" parent="Components/Hitbox"]
modulate = Color(1, 1, 1, 0)
material = SubResource("CanvasItemMaterial_vm30s")
position = Vector2(0, -25)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_2t02l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Components/Hitbox"]
libraries = {
&"": SubResource("AnimationLibrary_rojh0")
}

[node name="SightComponent" type="Node2D" parent="Components"]
unique_name_in_owner = true
position = Vector2(0, -8)
script = ExtResource("7_vm30s")

[node name="Front" type="RayCast2D" parent="Components/SightComponent"]
rotation = -1.5708
target_position = Vector2(-0.000463486, 128)
collision_mask = 8

[node name="RayCast2D" type="RayCast2D" parent="Components/SightComponent"]
rotation = -1.5708
target_position = Vector2(-64.0005, 128)
collision_mask = 8

[node name="RayCast2D2" type="RayCast2D" parent="Components/SightComponent"]
rotation = -1.5708
target_position = Vector2(55.9995, 128)
collision_mask = 8

[node name="PointLight2D" type="PointLight2D" parent="Components/SightComponent"]
position = Vector2(0, -2.38419e-07)
scale = Vector2(1, 0.875)
shadow_enabled = true
texture = ExtResource("6_dxgcx")
offset = Vector2(64, 0)
texture_scale = 0.25

[connection signal="body_entered" from="Components/Hitbox" to="Components/Hitbox" method="_on_body_entered"]
[connection signal="body_exited" from="Components/Hitbox" to="Components/Hitbox" method="_on_body_exited"]
[connection signal="on_player_no_longer_visible" from="Components/SightComponent" to="." method="_on_sight_component_on_player_no_longer_visible"]
[connection signal="on_player_sighted" from="Components/SightComponent" to="." method="_on_sight_component_on_player_sighted"]
